--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jszip": "^3.2.1",
     "lodash": "^4.17.11",
     "path-webpack": "0.0.3",
+    "promise-retry": "^1.1.1",
     "react": "16.8.3",
     "react-native": "0.61.2",
     "react-native-static-server": "^0.4.2",
