--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-native-community/async-storage": "^1.5.0",
     "base-64": "^0.1.0",
     "buffer": "^5.2.1",
-    "epubjs": "frasermince/epub.js#fm/page-jumping",
+    "epubjs": "^0.3.85",
     "events": "^3.0.0",
     "i": "^0.3.6",
     "jszip": "^3.2.1",
